--- a/frontend/src/pages/Case/Report/style.less
+++ b/frontend/src/pages/Case/Report/style.less
@@ -4,6 +4,6 @@
   border-left: 4px solid @error-color;
 }
 
-.success .ant-pro-card.ant-pro-card-border {
+.passed .ant-pro-card.ant-pro-card-border {
   border-left: 4px solid @success-color;
 }
